[feature] Confirmation screen UI implementation

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,5 +2,6 @@
 <resources>
     <style name="Theme.Gard" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:statusBarColor">@color/background</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 </resources>
